feat: optimize prompt size, fix zip css/js page packaging and enhance web crawler subpage discovery